clusters/casa/apps/sure/manifests/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sure-redis
  namespace: sure
spec:
  type: ClusterIP
  selector:
    app: sure-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
